--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Portfólio pessoal" />
+    <meta name="description" content="Portfólio Pessoal produzido para Anatielle Gomes por Alex Rese " />
     <meta name="author" content="Alex Luciano Roesler Rese" />
+    <meta property="og:title" content="Portfólio Pessoal Anatielle Gomes" />
+    <meta property="og:image" content="assets/img/indice200x200.png">
+    <meta property="og:url" content="https://anatiellegomes.com/" />
+    <meta property="og:description" content="Apresentação do meu portifólio pessoal">
     <title>Anatielle Gomes</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon16x16.ico" />
     <!-- Font Awesome icons (free version)-->
