--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://anatiellegomes.com/" />
     <meta property="og:description" content="Apresentação do meu portifólio pessoal">
     <title>Anatielle Gomes</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon16x16.ico" />
+    <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
