Troquei de Pessoa.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Portfólio Pessoal produzido para Anatielle Gomes por Alex Rese " />
-    <meta name="author" content="Alex Luciano Roesler Rese" />
-    <meta property="og:title" content="Portfólio Pessoal Anatielle Gomes" />
+    <meta name="description" content="Portfólio Pessoal produzido para Arquiteturas Schaefer " />
+    <meta name="author" content="Vicenzo Milan Maldaner" />
+    <meta property="og:title" content="Portfólio Pessoal Arquiteturas Schaefer" />
     <meta property="og:image" content="assets/img/indice200x200.png">
-    <meta property="og:url" content="https://anatiellegomes.com/" />
-    <meta property="og:description" content="Apresentação do meu portifólio pessoal">
-    <title>Anatielle Gomes</title>
+    <meta property="og:url" content="https://ArquiteturasSchaefer.com/" />
+    <meta property="og:description" content="Portifólio pessoal Arquiteturas Schaefer">
+    <title>Arquiteturas Schaefer</title>
     <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -25,9 +25,9 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Anatielle Gomes</span>
+            <span class="d-block d-lg-none">Arquiteturas Schaefer</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="assets/img/indice.png" alt="Foto de perfil" /></span>
+                    src="assets/img/Leo.jpeg" alt="Foto de perfil" /></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -49,20 +49,20 @@
         <section class="resume-section" id="about">
             <div class="resume-section-content">
                 <h1 class="mb-0">
-                    Anatielle
-                    <span class="text-primary">Gomes</span>
+                    Arquiteturas
+                    <span class="text-primary">Schaefer</span>
                 </h1>
                 <div class="subheading mb-5">
-                    Meia Praia · Itapema, Santa Catarina - Brasil, CEP 88220-000 · (47) 9 9206-1149·
-                    <a href="mailto:anatiellegomes.psi@gmail.com">anatiellegomes.psi@gmail.com</a>
+                    Unisinos · São Leopoldo, Rio Grande do Sul - Brasil, CEP 93022-750 · (51) 9 9398-9320·
+                    <a href="mailto:schae.leo@gmail.com">schae.leo@gmail.com</a>
                 </div>
                 <p class="lead mb-5">É incrível como a vida de cada um pode ser mudada em poucos segundos, e esse é meu
-                    sonho ajudar a você a realizar um dos seus sonhos. ~ A. Gomes, Cursando- Téc. em Transações
-                    Imobiliárias & Avaliação de Imóveis; por paixão. ~</p>
+                    sonho ajudar a você a realizar um dos seus sonhos. ~ L. Schaefer, Cursando- Bac. em Arquitetura e Urbanismo
+                    ; por paixão. ~</p>
                 <div class="social-icons">
                     <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="social-icon" href="https://www.instagram.com/anatiellegomes_comercial/"><i
+                    <a class="social-icon" href="https://www.facebook.com/schaeferrleo"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-icon" href="https://www.instagram.com/leoschfr/"><i
                             class="fab fa-instagram"></i></a>
                 </div>
             </div>
