Tentar Fazer Funcionar o Site.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Vicenzo Milan Maldaner" />
     <meta property="og:title" content="Portfólio Pessoal Arquiteturas Schaefer" />
     <meta property="og:image" content="assets/img/indice200x200.png">
-    <meta property="og:url" content="https://ArquiteturasSchaefer.com/" />
+    <meta property="og:url" content="https://ArquiteturaSchaefer.com/" />
     <meta property="og:description" content="Portifólio pessoal Arquiteturas Schaefer">
     <title>Arquiteturas Schaefer</title>
     <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" />
